# expenses

./: .env.example  README.md  docker-compose.yml  pyproject.toml
apps/base/: models.py
apps/config/: asgi.py  settings.py  urls.py  wsgi.py
apps/expenses/: admin.py  filters.py  models.py  urls.py
apps/expenses/api/: serializers.py  validators.py  viewsets.py
apps/expenses/fixtures/: expenses.json
apps/expenses/migrations/: 0001_initial.py  0002_rename_expense_expenses.py  0003_alter_expenses_amount.py
apps/expenses/selectors/: expenses.py
apps/expenses/tests/: test_models.py  test_selectors.py  test_serializers.py  test_viewsets.py
apps/users/: models.py
apps/users/fixtures/: users.json
apps/users/migrations/: 0001_initial.py
apps/users/selectors/: user.py
apps/users/tests/: test_models.py
docker/: Dockerfile
